<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_result">Result</string>
    <string name="title_setup">Setup</string>
    <string name="title_help">Help</string>
    <string name="ok">Ok</string>
    <string name="processor_default">Loading CPU usage...</string>
    <string name="memory_default">Loading Memory usage...</string>
    <string name="setup_title">Profil</string>
    <string name="profil_in_text">Import</string>
    <string name="profil_out_text">Export</string>
</resources>
